Removed references to Integer.valueOf(int)