@@ -131,8 +131,8 @@ public class NumberListTest extends TestCase {
         suite.addTest(new NumberListTest(new NumberList("0,2,5,-2,-4,-5,+3"), "0,2,5,-2,-4,-5,3"));
         suite.addTest(new NumberListTest(new NumberList("0,2,5,-2,-4,-5,+3", 0, 5, true), "0,2,5,-2,-4,-5,3"));
         
-        suite.addTest(new NumberListTest(new NumberList(0, 1, false), Integer.valueOf(0), Integer.valueOf(-1)));
-        suite.addTest(new NumberListTest(new NumberList("1", 0, 1, true), Integer.valueOf(0), Integer.valueOf(2)));
+        suite.addTest(new NumberListTest(new NumberList(0, 1, false), new Integer(0), new Integer(-1)));
+        suite.addTest(new NumberListTest(new NumberList("1", 0, 1, true), new Integer(0), new Integer(2)));
         
         return suite;
     }
